--- a/package.json
+++ b/package.json
@@ -4,8 +4,26 @@
   "description": "ODI REST API server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec",
+    "apidoc": "apidoc -e node_modules -o ui/apidoc/",
+    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*.js"
   },
   "author": "Soichi Hayashi <hayashis@iu.edu> (http://soichi.us)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async": "^2.0.0-rc.5",
+    "body-parser": "^1.15.1",
+    "compression": "^1.6.2",
+    "cors": "^2.7.1",
+    "express": "^4.13.4",
+    "express-jwt": "^3.4.0",
+    "express-winston": "^1.3.1",
+    "mongoose": "^4.4.17",
+    "request": "^2.72.0",
+    "ssh2": "^0.5.0",
+    "winston": "^2.2.0"
+  },
+  "devDependencies": {
+    "supertest": "^1.2.0"
+  }
 }
